# topsongs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
topsongs/: __main__.py
topsongs/io/: io_manager.py  server.py
topsongs/spotify/: auth.py  spotify.py
